# suanlitong

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CODEBUDDY.md  Dockerfile.agent  Dockerfile.backend  Makefile  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: agent-developer.md  api-developer.md  backend-architect.md  code-reviewer.md  devops-engineer.md  frontend-developer.md
.claude/skills/billing-engine/: SKILL.md
.claude/skills/cloud-gpu-integration/: SKILL.md
.claude/skills/deploy-suanlitong/: SKILL.md
.claude/skills/device-agent/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.github/workflows/: ci.yml  deploy.yml  generate-pitch.yml  test.yml
docker/: Dockerfile.backend  Dockerfile.nginx
docker/nginx/: default.conf
docs/: Phase-0-Codex提示词.md
docs/architecture/: 三方案对比与执行架构.md
docs/pitch/: Pitch-Deck.md  商业计划书.md  算力通_IPO退出路径分析.pptx  算力通_商业计划书_V3.md  算力通_投资人深度分析.pptx  算力通_种子轮_Pitch_Deck.pptx  算力通_种子轮_Pitch_Deck_V3.pptx
docs/research/: IDC新质算力发展白皮书2025-摘要.txt  全国一体化算力网加速成形-东方财富20260704.txt  算力网络从规模扩张到高效服务-工信新闻网2026.txt  算力行业综合研究报告_2025-2026.md  算电协同上升为国家战略-2026.txt
scripts/: build-and-push.sh  deploy.sh  generate_investor_deepdive.py  generate_ipo_analysis.py  generate_pptx.py  health-check.sh  rollback.sh  seed_db.py
src/agent/: __init__.py  config.py  daemon.py  executor.py  heartbeat.py  monitor.py
src/agent/tests/: __init__.py  test_heartbeat.py  test_monitor.py
src/backend/: cli.py
src/backend/app/: __init__.py  config.py  db.py  (+1 more)
(+14 files in other folders)
